# backend/src/main/java/com/hgw/gestionale/auth/dto/RegisterRequest.java
@@ -1,6 +1,8 @@
 package com.hgw.gestionale.auth.dto;
 
+import com.hgw.gestionale.user.entity.Role;
 import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
 
 public record RegisterRequest (
         @NotBlank
@@ -10,6 +12,8 @@ public record RegisterRequest (
         @NotBlank
         String email,
         @NotBlank
-        String password
+        String password,
+        @NotNull
+        Role role
 ){
 }
