# backend/src/main/java/com/hgw/gestionale/user/dto/UpdateUserRequest.java
@@ -1,0 +1,8 @@
+package com.hgw.gestionale.user.dto;
+
+public record UpdateUserRequest(
+        String nome,
+        String email,
+        String password
+) {
+}
